--- a/JKIKMS/src/main/resources/application.properties
+++ b/JKIKMS/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=80
 
+spring.devtools.livereload.enabled=true
+
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+
+
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true 
