--- a/JKIKMS/pom.xml
+++ b/JKIKMS/pom.xml
@@ -54,6 +54,14 @@
             <artifactId>javax.servlet.jsp.jstl-api</artifactId>
             <version>1.2.1</version>
         </dependency>
+        
+       
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160810</version>
+		</dependency>
+        
 		
 	</dependencies>
 
