--- a/JKIKMS/pom.xml
+++ b/JKIKMS/pom.xml
@@ -61,7 +61,14 @@
 		    <artifactId>json</artifactId>
 		    <version>20160810</version>
 		</dependency>
-        
+		
+		
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+
 		
 	</dependencies>
 
