--- a/JKIKMS/src/main/resources/application.properties
+++ b/JKIKMS/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.jdbc-url=jdbc:mysql://15.164.231.210:3306/jkikms
+spring.datasource.username=root
+spring.datasource.password=qnfwldhr1!
