--- a/JKIKMS/pom.xml
+++ b/JKIKMS/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.2.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.jkikms</groupId>
 	<artifactId>JKIKMS</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JKIKMS</name>
@@ -34,6 +34,11 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
 		</dependency>
 		
 		<dependency>
@@ -69,6 +74,13 @@
 		    <version>1.1.1</version>
 		</dependency>
 		
+		<!-- 마이바티스 -->
+		<dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+              <artifactId>mybatis-spring-boot-starter</artifactId>
+               <version>1.1.1</version>
+        </dependency>
+		
 		<dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis</artifactId>
@@ -80,12 +92,14 @@
 		  <version>1.3.2</version>
 		</dependency>
 		
+		
+		<!-- MySql -->
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.18</version>
 		</dependency>
-	
+
 	</dependencies>
 
 	<build>
