--- a/JKIKMS/src/main/resources/application.properties
+++ b/JKIKMS/src/main/resources/application.properties
@@ -11,7 +11,16 @@ spring.resources.static-locations=classpath:/static/
 spring.resources.add-mappings=true
 
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://15.164.231.210:3306/jkikms
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://15.164.231.210:3306/jkikms
 spring.datasource.username=root
 spring.datasource.password=qnfwldhr1!
+
+
+##com.mysql.cj.jdbc.Driver
+
+##spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
+##spring.datasource.url=jdbc:log4jdbc:mysql://localhost/test
+
+
