--- a/JKIKMS/src/main/resources/application.properties
+++ b/JKIKMS/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.resources.add-mappings=true
 
 
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://3.34.162.169:3306/jkikms
+spring.datasource.url=jdbc:log4jdbc:mysql://3.34.162.169:3306/jkikms?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=qnfwldhr1!
 
